--- a/draganddrop.html
+++ b/draganddrop.html
@@ -9,7 +9,8 @@
 <body>
     <header></header>
     <main>
-        <section id="instruction">Consigne : Ordonner la liste des planètes du système solaire selon la distance croissante avec le soleil</section>
+        <section id="instruction">Consigne : Ordonner la liste des planètes du système solaire selon la distance
+            croissante avec le soleil</section>
         <section id="game">
             <ul id="source">
             </ul>
@@ -88,31 +89,35 @@
         ev.preventDefault();
         // Get the id of the target and add the moved element to the target's DOM
         const data = ev.dataTransfer.getData("application/my-app");
-        ordenedList.push(data);
-        unordenedList.splice(unordenedList.indexOf(data), 1);
-        clearLists();
-        renderOrdonedList();
-        renderUnordonnedList();
+        if (!ordenedList.includes(data)) {
+            ordenedList.push(data);
+            unordenedList.splice(unordenedList.indexOf(data), 1);
+            clearLists();
+            renderOrdonedList();
+            renderUnordonnedList();
+        }
     }
 
     function drop_handler_source(ev) {
         ev.preventDefault();
         // Get the id of the target and add the moved element to the target's DOM
         const data = ev.dataTransfer.getData("application/my-app");
-        unordenedList.push(data);
-        ordenedList.splice(ordenedList.indexOf(data), 1);
-        clearLists();
-        renderOrdonedList();
-        renderUnordonnedList();
+        if (!unordenedList.includes(data)) {
+            unordenedList.push(data);
+            ordenedList.splice(ordenedList.indexOf(data), 1);
+            clearLists();
+            renderOrdonedList();
+            renderUnordonnedList();
+        }
     }
 
     function submit() {
         let winMessage = "YOU WIN";
         let loseMessage = "YOU LOSE";
-        if(hadWon()) {
+        if (hadWon()) {
             displayMessage(winMessage);
             setTimeout(clearMessage, 3000);
-        }else{
+        } else {
             displayMessage(loseMessage);
             setTimeout(clearMessage, 3000);
         }
@@ -134,9 +139,9 @@
     }
 
     function shuffle(list) {
-        let shuffleResult= [];
+        let shuffleResult = [];
         let answerCopy = list.concat();// create a copy of an array instead of passing the ref
-        while(answerCopy.length > 0) {
+        while (answerCopy.length > 0) {
             let arrayElement = answerCopy.splice(getRandomInt(answerCopy.length), 1);
             shuffleResult.push(arrayElement[0]);
         }
