--- a/draganddrop.html
+++ b/draganddrop.html
@@ -26,7 +26,7 @@
 <script>
 
     // mock data
-    const games =
+    const riddles =
         [
             {
                 instruction: "Ordonner la liste des planètes du système solaire selon la distance croissante avec le soleil.",
@@ -83,7 +83,7 @@
     }
 
     function initGame() {
-        let game = games[cpt];
+        let game = riddles[cpt];
         answer = game.answer;
         instruction = game.instruction;
         unordenedList = shuffle(answer);
@@ -160,7 +160,7 @@
 
     function next() {
         cpt += 1;
-        if(cpt < games.length) {
+        if(cpt < riddles.length) {
             initGame();
         }else{
             cpt = 0;
