--- a/draganddrop.html
+++ b/draganddrop.html
@@ -26,7 +26,7 @@
 <script>
 
     // global variables
-    var riddles;
+    var riddles = [];
     var answer;
     var instruction;
     var cpt = 0;
@@ -67,18 +67,13 @@
     }
 
     function initGame() {
-        var riddlesTmp = [];
         fetch('http://private.localhost/sortinggame/api.php')
             .then(response => response.json())
             .then(data => {
                 data.forEach(array => {
                     var tmp = { instruction: array.instruction, answer: JSON.parse(array.answer) };
-                    riddlesTmp.push(tmp);
+                    riddles.push(tmp);
                 })
-                return riddlesTmp;
-            })
-            .then((response) => {
-                riddles = response;
                 initRiddle(); 
             });
     }
